--- a/Mod/Data/Core/Languages/English/Barks.xml
+++ b/Mod/Data/Core/Languages/English/Barks.xml
@@ -13,8 +13,8 @@
 	<entry name="Orks/FlashGitz:Idle#8" value="Zhuko was here…"/>
 	<entry name="Orks/FlashGitz:IdleCount" value="9"/>
 
-	<entry name="Tau/CrisisBattlesuit:Idle#0" value="Always ready."/>
-	<entry name="Tau/CrisisBattlesuit:Idle#1" value="We'll get it done."/>
-	<entry name="Tau/CrisisBattlesuit:Idle#2" value="Zhuko was here…"/>
-	<entry name="Tau/CrisisBattlesuit:IdleCount" value="3"/>
+	<entry name="Tau/GhostkeelBattlesuit:Idle#0" value="Always ready."/>
+	<entry name="Tau/GhostkeelBattlesuit:Idle#1" value="We'll get it done."/>
+	<entry name="Tau/GhostkeelBattlesuit:Idle#2" value="Zhuko was here…"/>
+	<entry name="Tau/GhostkeelBattlesuit:IdleCount" value="3"/>
 </language>
