--- a/Mod/Data/Core/Languages/English/Units.xml
+++ b/Mod/Data/Core/Languages/English/Units.xml
@@ -49,4 +49,5 @@
     <entry name="Tau/RVarnaBattlesuit" value="R'Varna Battlesuit"/>
 
     <entry name="SistersOfBattle/Exorcist" value="Exarsist"/>
+    <entry name="SistersOfBattle/CastigatorDescription" value="Powerful tank unit equipped with multi meltas."/>
 </language>
