--- a/Mod/Data/Core/Languages/English/Actions.xml
+++ b/Mod/Data/Core/Languages/English/Actions.xml
@@ -153,10 +153,12 @@
     <entry name="SistersOfBattle/EmperorsBlaze" value="Emperor's Blaze" />
     <entry name="SistersOfBattle/EmperorsBlazeDescription" value="Imbues nearby allied infantry attacks with holy fire that applies damage over time debuff to the attacked enemy. Applies the same debuff to all nearby enemy units." />
     <entry name="SistersOfBattle/EmperorsBlazeFlavor" value="The Brazier of Eternal Flame burns above the faithful, its blazing light driving back the darkness and protecting the true servants of the Emperor from foul sorceries and unholy abominations." />
+    <entry name="SistersOfBattle/EndlessCrusadeDescription" value="Gains Blurry, Fleet and Move Through Cover.<br/><br/><string name='Actions/SistersOfBattle/ActOfFaithDescription'/>"/>
     <entry name="SistersOfBattle/EternalCrusadeDescription" value="Sacred Rite that increases the production output of Battle Chapels." />
     <entry name="SistersOfBattle/HolyFire" value="Holy Fire" />
     <entry name="SistersOfBattle/HolyFireDescription" value="Imbues target allied infantry attacks with holy fire that applies damage over time debuff to the attacked enemy." />
     <entry name="SistersOfBattle/HolyFireFlavor" value="Fed by auxiliary fuel lines, this transport’s braziers are made to flare with holy fire, tinged with sacred unguents and rare resins" />
+    <entry name="SistersOfBattle/LightOfTheEmperorDescription" value="Increases the accuracy and decreases opponent's ranged accuracy.<br/><br/><string name='Actions/SistersOfBattle/ActOfFaithDescription'/>"/>
 
     <entry name="SpaceMarines/AdditionalHeavyBolter" value="Install Heavy Bolter" />
     <entry name="SpaceMarines/AdditionalHeavyBolterDescription" value="Grants Fortress of Redemption additional heavy bolter. Only one upgrade or install can be set up for a unit." />
